@@ -405,7 +405,7 @@ BaseObjectData *%(classname)s::getDefaultObject()
         self.write("\n")
         self.write('#include "' + self.classname_pointer + '.h"\n')
         self.write("\n")
-        self.write("using namespace std;\n")
+        #self.write("using namespace std;\n")
         self.write("using namespace Atlas;\n")
         self.write("using namespace Atlas::Message;\n")
         self.write("\n")
@@ -516,7 +516,7 @@ public:
         self.write("\n")
         self.write('#include "' + self.generic_class_name + '.h"\n')
         self.write("\n")
-        self.write("using namespace std;\n")
+        #self.write("using namespace std;\n")
         self.write("using namespace Atlas;\n")
         self.write("using namespace Atlas::Message;\n")
         self.write("\n")
